--- a/dynamicstore.html
+++ b/dynamicstore.html
@@ -12,9 +12,9 @@
     <header class="main-header">
         <nav class="main-nav nav">
             <ul>
-                <li>HOME</a></li>
-                <li>STORE</a></li>
-                <li>ABOUT</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="#">STORE</a></li>
+                <li><a href="about.html">ABOUT</a></li>
             </ul>
         </nav>
         <h1 class="band-name band-name-large">The Generics</h1>
