--- a/dynamicstore.html
+++ b/dynamicstore.html
@@ -5,112 +5,163 @@
     <title>The Generics | Store</title>
     <meta name="description" content="This is the description">
     <link rel="stylesheet" href="./style.css" />
-    <script src="index.js" async></script>
+    <script src="./index.js" defer></script>
 </head>
 
 <body>
-    <header class="main-header">
-        <nav class="main-nav nav">
-            <ul>
+    <div id="EcommerceContainer">
+        <header>
+            <ul class='header'>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="#">STORE</a></li>
                 <li><a href="about.html">ABOUT</a></li>
+                <a href="#cart" class="cart-holder">cart<span class='cart-number'>0</span></a>
             </ul>
-        </nav>
-        <h1 class="band-name band-name-large">The Generics</h1>
-    </header>
-    <section class="container content-section">
-        <h2 class="section-header">MUSIC</h2>
-        <div class="shop-items">
-            <div class="shop-item">
-                <span class="shop-item-title">Album 1</span>
-                <img class="shop-item-image" src="Images/Album 1.png">
-                <div class="shop-item-details">
-                    <span class="shop-item-price">$12.99</span>
-                    <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            <h1>The Generics</h1>
+        </header>
+        <section id="music" class="container">
+            <h2>MUSIC</h2>
+            <div id="music-content">
+                <div id='album1'>
+                    <h3>Album 1</h3>
+                    <div class="image-container">
+                        <img class="prod-images" src="https://prasadyash2411.github.io/ecom-website/img/Album%201.png"
+                            alt="">
+                    </div>
+                    <div class="prod-details">
+                        <span>$<span>12.99</span></span>
+                        <button class="shop-item-button" type='button'>ADD TO CART</button>
+                    </div>
+                </div>
+                <div id='album2'>
+                    <h3>Album 2</h3>
+                    <div class="image-container">
+                        <img class="prod-images" src="https://prasadyash2411.github.io/ecom-website/img/Album%202.png"
+                            alt="">
+                    </div>
+                    <div class="prod-details">
+                        <span>$<span>14.99</span></span>
+                        <button class="shop-item-button" type='button'>ADD TO CART</button>
+                    </div>
+                </div>
+                <div id='album3'>
+                    <h3>Album 3</h3>
+                    <div class="image-container">
+                        <img class="prod-images" src="https://prasadyash2411.github.io/ecom-website/img/Album%203.png"
+                            alt="">
+                    </div>
+                    <div class="prod-details">
+                        <span>$<span>9.99</span></span>
+                        <button class="shop-item-button" type='button'>ADD TO CART</button>
+                    </div>
+                </div>
+                <div id='album4'>
+                    <h3>Album 4</h3>
+                    <div class="image-container">
+                        <img class="prod-images" src="https://prasadyash2411.github.io/ecom-website/img/Album%204.png"
+                            alt="">
+                    </div>
+                    <div class="prod-details">
+                        <span>$<span>19.99</span></span>
+                        <button class="shop-item-button" type='button'>ADD TO CART</button>
+                    </div>
                 </div>
             </div>
-            <div class="shop-item">
-                <span class="shop-item-title">Album 2</span>
-                <img class="shop-item-image" src="Images/Album 2.png">
-                <div class="shop-item-details">
-                    <span class="shop-item-price">$14.99</span>
-                    <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+
+        </section>
+        <section id="merch" class="container">
+            <h2>MERCH</h2>
+            <div id="merch-content">
+                <div id="t-shirt">
+                    <h3>T-Shirt</h3>
+                    <div class="image-container">
+                        <img class="prod-images" src="https://prasadyash2411.github.io/ecom-website/img/Shirt.png"
+                            alt="">
+                    </div>
+                    <div class="prod-details">
+                        <span>$<span>19.99</span></span>
+                        <button class="shop-item-button" type='button'>ADD TO CART</button>
+                    </div>
+                </div>
+                <div id="coffee-cup">
+                    <h3>Coffee Cup</h3>
+                    <div class="image-container">
+                        <img class="prod-images" src="https://prasadyash2411.github.io/ecom-website/img/Cofee.png"
+                            alt="">
+                    </div>
+                    <div class="prod-details">
+                        <span>$<span>6.99</span></span>
+                        <button class="shop-item-button" type='button'>ADD TO CART</button>
+                    </div>
                 </div>
             </div>
-            <div class="shop-item">
-                <span class="shop-item-title">Album 3</span>
-                <img class="shop-item-image" src="Images/Album 3.png">
-                <div class="shop-item-details">
-                    <span class="shop-item-price">$9.99</span>
-                    <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
-                </div>
+
+        </section>
+        <section id="cart" class="container">
+            <h2>CART</h2>
+            <button class="cancel">X</button>
+            <div class="cart-row cart-header">
+                <span class='cart-item cart-column'>ITEM</span>
+                <span class='cart-price cart-column'>PRICE</span>
+                <span class='cart-quantity cart-column'>QUANTITY</span>
             </div>
-            <div class="shop-item">
-                <span class="shop-item-title">Album 4</span>
-                <img class="shop-item-image" src="Images/Album 4.png">
-                <div class="shop-item-details">
-                    <span class="shop-item-price">$19.99</span>
-                    <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            <div class='cart-items'>
+                <!-- <div class="cart-row">
+                    <span class='cart-item cart-column'>
+                        <img class='cart-img' src="img/Shirt.png" alt="">
+                        <span>T-Shirt</span>
+                    </span>
+                    <span class='cart-price cart-column'>$19.99</span>
+                    <span class='cart-quantity cart-column'>
+                        <input type="text">
+                        <button>REMOVE</button>
+                    </span>
                 </div>
+                <div class="cart-row">
+                    <span class='cart-item cart-column'>
+                        <img class='cart-img' src="/img/Album 3.png" alt="">
+                        <span>Album 3</span>
+                    </span>
+                    <span class='cart-price cart-column'>$9.99</span>
+                    <span class='cart-quantity cart-column'>
+                        <input type="text">
+                        <button>REMOVE</button>
+                    </span>
+                </div> -->
             </div>
+            <div class="cart-total">
+                <span>
+                    <span class='total-title'> <strong>Total</strong>
+                    </span>
+                    $<span id='total-value'>0</span>
+                </span>
+            </div>
+            <button class='purchase-btn' type='button'>PURCHASE</button>
+        </section>
+
+        <button class="cart-btn-bottom"> <a href="#cart" class="cart-bottom">See the cart</a></button>
+    </div>
+
+
+
+    <!-- Toggle notification -->
+    <div id="container"></div>
+    <footer>
+        <div class="footer-title">
+            The Generics
         </div>
-    </section>
-    <section class="container content-section">
-        <h2 class="section-header">MERCH</h2>
-        <div class="shop-items">
-            <div class="shop-item">
-                <span class="shop-item-title">T-Shirt</span>
-                <img class="shop-item-image" src="Images/Shirt.png">
-                <div class="shop-item-details">
-                    <span class="shop-item-price">$19.99</span>
-                    <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
-                </div>
-            </div>
-            <div class="shop-item">
-                <span class="shop-item-title">Coffee Cup</span>
-                <img class="shop-item-image" src="Images/Cofee.png">
-                <div class="shop-item-details">
-                    <span class="shop-item-price">$6.99</span>
-                    <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="container content-section">
-        <h2 class="section-header">CART</h2>
-        <div class="cart-row">
-            <span class="cart-item cart-header cart-column">ITEM</span>
-            <span class="cart-price cart-header cart-column">PRICE</span>
-            <span class="cart-quantity cart-header cart-column">QUANTITY</span>
-        </div>
-        <div class="cart-items">
-        </div>
-        <div class="cart-total">
-            <strong class="cart-total-title">Total</strong>
-            <span class="cart-total-price">$0</span>
-        </div>
-        <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
-    </section>
-    <footer class="main-footer">
-        <div class="container main-footer-container">
-            <h3 class="band-name">The Generics</h3>
-            <ul class="nav footer-nav">
-                <li>
-                    <a href="https://www.youtube.com" target="_blank">
-                        <img src="Images/YouTube Logo.png">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.spotify.com" target="_blank">
-                        <img src="Images/Spotify Logo.png">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com" target="_blank">
-                        <img src="Images/Facebook Logo.png">
-                    </a>
-                </li>
+        <div class="footer-icons">
+            <ul>
+                <li><a href="https://www.youtube.com">
+                        <img src="https://prasadyash2411.github.io/ecom-website/img/6260efc8fc9a9002669d2f4ad9956cc0.jpg"
+                            alt="">
+                    </a></li>
+                <li><a href="https://spotify.com">
+                        <img src="https://prasadyash2411.github.io/ecom-website/img/Spotify%20Logo.png" alt="">
+                    </a></li>
+                <li><a href="https://facebook.com">
+                        <img src="https://prasadyash2411.github.io/ecom-website/img/Facebook%20Logo.png" alt="">
+                    </a></li>
             </ul>
         </div>
     </footer>
