Task -11 -> Integration of Products

--- a/dynamicstore.html
+++ b/dynamicstore.html
@@ -19,84 +19,12 @@
             </ul>
             <h1>The Generics</h1>
         </header>
-        <section id="music" class="container">
-            <h2>MUSIC</h2>
-            <div id="music-content">
-                <div id='album1'>
-                    <h3>Album 1</h3>
-                    <div class="image-container">
-                        <img class="prod-images" src="https://prasadyash2411.github.io/ecom-website/img/Album%201.png"
-                            alt="">
-                    </div>
-                    <div class="prod-details">
-                        <span>$<span>12.99</span></span>
-                        <button class="shop-item-button" type='button'>ADD TO CART</button>
-                    </div>
-                </div>
-                <div id='album2'>
-                    <h3>Album 2</h3>
-                    <div class="image-container">
-                        <img class="prod-images" src="https://prasadyash2411.github.io/ecom-website/img/Album%202.png"
-                            alt="">
-                    </div>
-                    <div class="prod-details">
-                        <span>$<span>14.99</span></span>
-                        <button class="shop-item-button" type='button'>ADD TO CART</button>
-                    </div>
-                </div>
-                <div id='album3'>
-                    <h3>Album 3</h3>
-                    <div class="image-container">
-                        <img class="prod-images" src="https://prasadyash2411.github.io/ecom-website/img/Album%203.png"
-                            alt="">
-                    </div>
-                    <div class="prod-details">
-                        <span>$<span>9.99</span></span>
-                        <button class="shop-item-button" type='button'>ADD TO CART</button>
-                    </div>
-                </div>
-                <div id='album4'>
-                    <h3>Album 4</h3>
-                    <div class="image-container">
-                        <img class="prod-images" src="https://prasadyash2411.github.io/ecom-website/img/Album%204.png"
-                            alt="">
-                    </div>
-                    <div class="prod-details">
-                        <span>$<span>19.99</span></span>
-                        <button class="shop-item-button" type='button'>ADD TO CART</button>
-                    </div>
-                </div>
-            </div>
+
+        <section id="Products" class="container">
+            <h2>Products</h2>
 
         </section>
-        <section id="merch" class="container">
-            <h2>MERCH</h2>
-            <div id="merch-content">
-                <div id="t-shirt">
-                    <h3>T-Shirt</h3>
-                    <div class="image-container">
-                        <img class="prod-images" src="https://prasadyash2411.github.io/ecom-website/img/Shirt.png"
-                            alt="">
-                    </div>
-                    <div class="prod-details">
-                        <span>$<span>19.99</span></span>
-                        <button class="shop-item-button" type='button'>ADD TO CART</button>
-                    </div>
-                </div>
-                <div id="coffee-cup">
-                    <h3>Coffee Cup</h3>
-                    <div class="image-container">
-                        <img class="prod-images" src="https://prasadyash2411.github.io/ecom-website/img/Cofee.png"
-                            alt="">
-                    </div>
-                    <div class="prod-details">
-                        <span>$<span>6.99</span></span>
-                        <button class="shop-item-button" type='button'>ADD TO CART</button>
-                    </div>
-                </div>
-            </div>
 
-        </section>
         <section id="cart" class="container">
             <h2>CART</h2>
             <button class="cancel">X</button>
@@ -106,28 +34,7 @@
                 <span class='cart-quantity cart-column'>QUANTITY</span>
             </div>
             <div class='cart-items'>
-                <!-- <div class="cart-row">
-                    <span class='cart-item cart-column'>
-                        <img class='cart-img' src="img/Shirt.png" alt="">
-                        <span>T-Shirt</span>
-                    </span>
-                    <span class='cart-price cart-column'>$19.99</span>
-                    <span class='cart-quantity cart-column'>
-                        <input type="text">
-                        <button>REMOVE</button>
-                    </span>
-                </div>
-                <div class="cart-row">
-                    <span class='cart-item cart-column'>
-                        <img class='cart-img' src="/img/Album 3.png" alt="">
-                        <span>Album 3</span>
-                    </span>
-                    <span class='cart-price cart-column'>$9.99</span>
-                    <span class='cart-quantity cart-column'>
-                        <input type="text">
-                        <button>REMOVE</button>
-                    </span>
-                </div> -->
+
             </div>
             <div class="cart-total">
                 <span>
@@ -165,6 +72,8 @@
             </ul>
         </div>
     </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
 </body>
 
 </html>
