Task -14 -> Adding Pagination

--- a/dynamicstore.html
+++ b/dynamicstore.html
@@ -49,7 +49,8 @@
         <button class="cart-btn-bottom"> <a href="#cart" class="cart-bottom">See the cart</a></button>
     </div>
 
-
+    <section id="productPagination">
+    </section>
 
     <!-- Toggle notification -->
     <div id="container"></div>
