--- a/dynamicstore.html
+++ b/dynamicstore.html
@@ -14,6 +14,7 @@
             <ul class='header'>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="#">STORE</a></li>
+                <li><a href="orders.html">ORDER</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <a href="#cart" class="cart-holder">cart<span class='cart-number'>0</span></a>
             </ul>
